# front-end-template

./: .pre-commit-config.yaml  README.md
backend/: README.md  pyproject.toml
backend/src/app/: __main__.py  config.py  dependencies.py  main.py
backend/src/app/api/v1/endpoints/: items.py  users.py
frontend/: README.md  next.config.ts  pnpm-lock.yaml
frontend/src/app/: page.tsx
