[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["younthing <fanxingfu3344@gmail.com>"]
readme = "README.md"
packages = [{ include = "back", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.115.6" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
